--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "javascript-testing",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0"
-  },
-  "dependencies": {
-    "delay": "^6.0.0"
-  }
+    "name": "javascript-testing",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "vitest --reporter=verbose",
+        "test:ui": "vitest --ui",
+        "coverage": "vitest run --coverage"
+    },
+    "devDependencies": {
+        "@vitest/coverage-v8": "^3.0.9",
+        "@vitest/ui": "^3.0.9",
+        "vite": "^5.0.0",
+        "vitest": "^3.0.9"
+    },
+    "dependencies": {
+        "delay": "^6.0.0"
+    }
 }
