--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "javascript-testing",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "vitest --reporter=verbose",
-        "test:ui": "vitest --ui",
-        "coverage": "vitest run --coverage"
-    },
-    "devDependencies": {
-        "@vitest/coverage-v8": "^3.0.9",
-        "@vitest/ui": "^3.0.9",
-        "vite": "^5.0.0",
-        "vitest": "^3.0.9"
-    },
-    "dependencies": {
-        "delay": "^6.0.0"
-    }
+  "name": "javascript-testing",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest --reporter=verbose",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
+    "format": "prettier . --write"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/ui": "^3.0.9",
+    "prettier": "^3.5.3",
+    "vite": "^6.2.6",
+    "vitest": "^3.0.9"
+  },
+  "dependencies": {
+    "delay": "^6.0.0"
+  }
 }
