--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "vitest --reporter=verbose",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint . --fix"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "@vitest/coverage-v8": "^3.0.9",
     "@vitest/ui": "^3.0.9",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "vite": "^6.2.6",
     "vitest": "^3.0.9"
